# food-products-management

./: CMakeLists.txt  README.md  add.cpp  add.h  add.ui  draw.cpp  draw.h  draw.ui  graf.cpp  graf.h  information.cpp  information.h  information.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h  search.ui
